// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider should match snapshot with badge 1`] = `
<div
  className="sc-dkzDqf fBSlBa"
  data-testid="divider-test-id"
>
  <div
    className="sc-hKMtZM cJojKy"
  />
  <span
    className="sc-eCYdqJ fGmLST"
  >
    Badge
  </span>
</div>
`;

exports[`Divider should match snapshot without badge 1`] = `
<div
  className="sc-dkzDqf fBSlBa"
  data-testid="divider-test-id"
>
  <div
    className="sc-hKMtZM cJojKy"
  />
</div>
`;
